--- a/Feedbridge.xcodeproj/xcshareddata/xcschemes/Feedbridge.xcscheme
+++ b/Feedbridge.xcodeproj/xcshareddata/xcschemes/Feedbridge.xcscheme
@@ -82,6 +82,10 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "--testingMode"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "--showOnboarding"
             isEnabled = "NO">
          </CommandLineArgument>
